objects/GEMS_Email_Notification__mdt.object
<CustomObject>
    <fields>
        <fullName>Business_Area__c</fullName>
        <label>Business Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <label>Funding Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GEMS Email Notification</label>
    <pluralLabel>GEMS Email Notifications</pluralLabel>
</CustomObject>